--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "expensify",
   "version": "1.0.0",
-  "engines": {
-    "node": "10.16.0"
-  },
   "main": "index.js",
   "author": "Ruslan Kulish",
   "license": "MIT",
@@ -46,5 +43,14 @@
     "uuid": "^3.3.2",
     "validator": "^11.1.0",
     "webpack": "^4.38.0"
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.2",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.10.2",
+    "webpack-dev-server": "^3.7.2",
+    "webpack-cli": "^3.3.6"
   }
 }
