--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.1.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.2",
     "express": "^4.17.1",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -37,20 +41,13 @@
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "react-test-renderer": "^16.10.2",
     "redux": "^4.0.4",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^11.1.0",
-    "webpack": "^4.38.0"
-  },
-  "devDependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-to-json": "^3.4.2",
-    "jest": "^24.9.0",
-    "react-test-renderer": "^16.10.2",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-cli": "^3.3.6"
+    "webpack": "^4.38.0",
+    "webpack-dev-server": "^3.7.2"
   }
 }
