--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "validator": "^11.1.0",
-    "webpack": "^4.38.0",
+    "webpack": "^4.38.0"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
