--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -28,20 +28,23 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.1.0",
     "express": "^4.17.1",
+    "firebase": "^7.5.0",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
     "raf": "^3.4.1",
-    "react": "^16.8.6",
+    "react": "^16.12.0",
     "react-addons-shallow-compare": "^15.6.2",
-    "react-dates": "^20.3.0",
+    "react-dates": "^21.5.1",
     "react-dom": "^16.8.6",
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
@@ -49,6 +52,8 @@
     "webpack": "^4.38.0"
   },
   "devDependencies": {
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.2",
